--- a/miracle/privacy.html
+++ b/miracle/privacy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy</title>
+    <title>Privacy Policy for Miracle AI - AI Art Generator</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -25,7 +25,7 @@
 </head>
 <body>
     <h1>Privacy Policy</h1>
-    <p>This privacy policy applies to the Diary&Events app (hereby referred to as "Application") for mobile devices that was created by Cem Telliagaoglu (hereby referred to as "Service Provider'') as a Freemium service. This service is intended for use "AS IS''.</p>
+    <p>This privacy policy applies to the MiracleAI - AI Art Generator app (hereby referred to as "Application") for mobile devices that was created by Cem Telliagaoglu (hereby referred to as "Service Provider'') as a Freemium service. This service is intended for use "AS IS''.</p>
     
     <h2>Information Collection and Use</h2>
     <p>The Application collects information when you download and use it. This information may include information such as:</p>
